# dagster_llm_finetune

./: .gitignore  README.md  finetuner-notebook.ipynb  pyproject.toml
dataset/: create-dagster-support-dataset.py  dagster-support-dataset.json
tutorial/: __init__.py
tutorial/assets/: __init__.py  datasets.py  models.py  predictions.py
tutorial/resources/: __init__.py  resources.py
