[tool.poetry]
name = "dagster-llm-finetune"
version = "0.1.0"
description = ""
authors = ["Kyryl Truskovskyi <truskovskiyk@gmail.com>", "Christopher Tee <christopherfytee@gmail.com", "Nahim Nasser", "Odette Harary <odette@dagsterlabs.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
absl-py = "^1.4.0"
evaluate = "^0.4.0"
dagster-webserver = "^1.4"
dagster = "^1.4"
datasets = "^2.13.1"
nltk = "^3.8.1"
peft = "^0.4.0"
pydantic = "<2.0"
rouge-score = "^0.1.2"
scikit-learn = "^1.3.0"
transformers = "^4.30.2"
torch = ">2.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[tool.dagster]
module_name = "tutorial"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
